# AD9082

./: CMakeLists.txt  example_server.cpp
api/: CMakeLists.txt
config/: general.json
inc/: spi.h  tcp_server.h
proj/: main.cpp
src/: spi.cpp  tcp_server.cpp
